force-app/main/default/objects/FSO__c/FSO__c.object-meta.xml
<CustomObject>
    <label>FSO</label>
    <nameField>
        <label>FSO Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FSO</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>