force-app/main/default/objects/FSO__c/fields/AD_Account__c.field-meta.xml
<CustomField>
    <fullName>AD_Account__c</fullName>
    <label>AD Account</label>
    <type>Date</type>
</CustomField>