force-app/main/default/objects/FSO__c/fields/BI_on_File_Meets_Exceeds_Requirement__c.field-meta.xml
<CustomField>
    <fullName>BI_on_File_Meets_Exceeds_Requirement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BI on File Meets/ Exceeds Requirement</label>
    <type>Checkbox</type>
</CustomField>