force-app/main/default/objects/FSO__c/fields/CBIR_Submitted_to_COR__c.field-meta.xml
<CustomField>
    <fullName>CBIR_Submitted_to_COR__c</fullName>
    <label>CBIR Submitted to COR</label>
    <type>Date</type>
</CustomField>