force-app/main/default/objects/FSO__c/fields/COI__c.field-meta.xml
<CustomField>
    <fullName>COI__c</fullName>
    <label>COI</label>
    <type>Date</type>
</CustomField>