force-app/main/default/objects/FSO__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>FSO</relationshipLabel>
    <relationshipName>FSO</relationshipName>
    <type>Lookup</type>
</CustomField>