force-app/main/default/objects/FSO__c/fields/CROB_Complete__c.field-meta.xml
<CustomField>
    <fullName>CROB_Complete__c</fullName>
    <label>CROB Complete</label>
    <type>Date</type>
</CustomField>