force-app/main/default/objects/FSO__c/fields/Current_Phase__c.field-meta.xml
<CustomField>
    <fullName>Current_Phase__c</fullName>
    <label>Current Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FSO_Phases</valueSetName>
    </valueSet>
</CustomField>