force-app/main/default/objects/FSO__c/fields/Current_Phase_Active_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Phase_Active_Date__c</fullName>
    <label>Current Phase Active Date</label>
    <type>Date</type>
</CustomField>