force-app/main/default/objects/FSO__c/fields/Date_Disassociated_From_Task_Order__c.field-meta.xml
<CustomField>
    <fullName>Date_Disassociated_From_Task_Order__c</fullName>
    <label>Date Disassociated From Task Order</label>
    <type>Date</type>
</CustomField>