force-app/main/default/objects/FSO__c/fields/Date_Separation_Worksheet_Due_to_FSO__c.field-meta.xml
<CustomField>
    <fullName>Date_Separation_Worksheet_Due_to_FSO__c</fullName>
    <label>Date Separation Worksheet Due to FSO</label>
    <type>Date</type>
</CustomField>