force-app/main/default/objects/FSO__c/fields/Date_Separation_Worksheet_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Separation_Worksheet_Received__c</fullName>
    <label>Date Separation Worksheet Received</label>
    <type>Date</type>
</CustomField>