force-app/main/default/objects/FSO__c/fields/Date_Separation_Worksheet_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Separation_Worksheet_Sent__c</fullName>
    <label>Date Separation Worksheet Sent</label>
    <type>Date</type>
</CustomField>