force-app/main/default/objects/FSO__c/fields/Days_In_Current_Phase__c.field-meta.xml
<CustomField>
    <fullName>Days_In_Current_Phase__c</fullName>
    <formula>TODAY() - Current_Phase_Active_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days In Current Phase</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>