force-app/main/default/objects/FSO__c/fields/Days_Until_PIV_Expires__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_PIV_Expires__c</fullName>
    <formula>PIV_Expiration_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until PIV Expires</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>