force-app/main/default/objects/FSO__c/fields/Documents_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Documents_Accepted__c</fullName>
    <label>Documents Accepted</label>
    <type>Date</type>
</CustomField>