force-app/main/default/objects/FSO__c/fields/Earliest_PIV_Can_Be_Requested__c.field-meta.xml
<CustomField>
    <fullName>Earliest_PIV_Can_Be_Requested__c</fullName>
    <formula>eQIP_Transmittal_Notice__c + 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Earliest PIV Can Be Requested</label>
    <type>Date</type>
</CustomField>