force-app/main/default/objects/FSO__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>FSO</relationshipLabel>
    <relationshipName>FSO</relationshipName>
    <type>Lookup</type>
</CustomField>