force-app/main/default/objects/FSO__c/fields/eQIP_Email_Received__c.field-meta.xml
<CustomField>
    <fullName>eQIP_Email_Received__c</fullName>
    <label>eQIP Email Received</label>
    <type>Date</type>
</CustomField>