force-app/main/default/objects/FSO__c/fields/eQIP_Returned_Errors__c.field-meta.xml
<CustomField>
    <fullName>eQIP_Returned_Errors__c</fullName>
    <label>eQIP Returned/ Errors</label>
    <type>Date</type>
</CustomField>