force-app/main/default/objects/FSO__c/fields/eQIP_Transmittal_Notice__c.field-meta.xml
<CustomField>
    <fullName>eQIP_Transmittal_Notice__c</fullName>
    <label>eQIP Transmittal Notice</label>
    <type>Date</type>
</CustomField>