force-app/main/default/objects/FSO__c/fields/Facility_Location__c.field-meta.xml
<CustomField>
    <fullName>Facility_Location__c</fullName>
    <label>Facility Location</label>
    <type>TextArea</type>
</CustomField>