force-app/main/default/objects/FSO__c/fields/Fingerprint_Appt_Date__c.field-meta.xml
<CustomField>
    <fullName>Fingerprint_Appt_Date__c</fullName>
    <label>Fingerprint Appt Date</label>
    <type>Date</type>
</CustomField>