force-app/main/default/objects/FSO__c/fields/Fingerprints_Complete__c.field-meta.xml
<CustomField>
    <fullName>Fingerprints_Complete__c</fullName>
    <label>Fingerprints Complete</label>
    <type>Date</type>
</CustomField>