force-app/main/default/objects/FSO__c/fields/GFE_Anticipated_Return__c.field-meta.xml
<CustomField>
    <fullName>GFE_Anticipated_Return__c</fullName>
    <label>GFE Anticipated Return</label>
    <type>Date</type>
</CustomField>