force-app/main/default/objects/FSO__c/fields/GFE_Email_Received__c.field-meta.xml
<CustomField>
    <fullName>GFE_Email_Received__c</fullName>
    <label>GFE Email Received</label>
    <type>Date</type>
</CustomField>