force-app/main/default/objects/FSO__c/fields/GFE_Location__c.field-meta.xml
<CustomField>
    <fullName>GFE_Location__c</fullName>
    <label>GFE Pick-Up Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>