force-app/main/default/objects/FSO__c/fields/GFE_Make_Model__c.field-meta.xml
<CustomField>
    <fullName>GFE_Make_Model__c</fullName>
    <label>GFE Make/ Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>