force-app/main/default/objects/FSO__c/fields/GFE_Quantity__c.field-meta.xml
<CustomField>
    <fullName>GFE_Quantity__c</fullName>
    <label>GFE Quantity</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>