force-app/main/default/objects/FSO__c/fields/GFE_Received__c.field-meta.xml
<CustomField>
    <fullName>GFE_Received__c</fullName>
    <label>GFE Issued</label>
    <type>Date</type>
</CustomField>