force-app/main/default/objects/FSO__c/fields/GFE_Requested__c.field-meta.xml
<CustomField>
    <fullName>GFE_Requested__c</fullName>
    <label>GFE Requested</label>
    <type>Date</type>
</CustomField>