force-app/main/default/objects/FSO__c/fields/GFE_Returned_Date__c.field-meta.xml
<CustomField>
    <fullName>GFE_Returned_Date__c</fullName>
    <label>GFE Returned Date</label>
    <type>Date</type>
</CustomField>