force-app/main/default/objects/FSO__c/fields/GFE_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>GFE_Serial_Number__c</fullName>
    <label>GFE Serial Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>