force-app/main/default/objects/FSO__c/fields/GFEValue__c.field-meta.xml
<CustomField>
    <fullName>GFEValue__c</fullName>
    <label>GFE Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>