force-app/main/default/objects/FSO__c/fields/HIPAA_Training__c.field-meta.xml
<CustomField>
    <fullName>HIPAA_Training__c</fullName>
    <label>HIPAA Training Complete</label>
    <type>Date</type>
</CustomField>