force-app/main/default/objects/FSO__c/fields/Incorrect_Documents_Returned__c.field-meta.xml
<CustomField>
    <fullName>Incorrect_Documents_Returned__c</fullName>
    <label>Incorrect Documents Returned</label>
    <type>Date</type>
</CustomField>