force-app/main/default/objects/FSO__c/fields/Initial_Project_PM__c.field-meta.xml
<CustomField>
    <fullName>Initial_Project_PM__c</fullName>
    <formula>Project__r.PM__r.FirstName &amp; &quot; &quot; &amp;  Project__r.PM__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Project PM</label>
    <type>Text</type>
</CustomField>