force-app/main/default/objects/FSO__c/fields/Investigation_Tier__c.field-meta.xml
<CustomField>
    <fullName>Investigation_Tier__c</fullName>
    <label>Investigation Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 4</fullName>
            </value>
            <value>
                <fullName>NACI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>