force-app/main/default/objects/FSO__c/fields/Labor_Category1__c.field-meta.xml
<CustomField>
    <fullName>Labor_Category1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Labor Category</label>
    <referenceTo>Labor_Category__c</referenceTo>
    <relationshipLabel>FSO</relationshipLabel>
    <relationshipName>FSO</relationshipName>
    <type>Lookup</type>
</CustomField>