force-app/main/default/objects/FSO__c/fields/Need_GFE__c.field-meta.xml
<CustomField>
    <fullName>Need_GFE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs GFE</label>
    <type>Checkbox</type>
</CustomField>