force-app/main/default/objects/FSO__c/fields/Onboarding_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Email_Sent__c</fullName>
    <label>Onboarding Email Sent</label>
    <type>Date</type>
</CustomField>