force-app/main/default/objects/FSO__c/fields/Onboarding_Packet_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Packet_Submitted__c</fullName>
    <label>Onboarding Packet Submitted</label>
    <type>Date</type>
</CustomField>