force-app/main/default/objects/FSO__c/fields/Onboarding_Type__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Type__c</fullName>
    <label>Onboarding Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>CTG</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>