force-app/main/default/objects/FSO__c/fields/Paperwork_Due_to_FSO__c.field-meta.xml
<CustomField>
    <fullName>Paperwork_Due_to_FSO__c</fullName>
    <formula>Onboarding_Email_Sent__c + 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paperwork Due to FSO</label>
    <type>Date</type>
</CustomField>