force-app/main/default/objects/FSO__c/fields/PISA_Training_Complete__c.field-meta.xml
<CustomField>
    <fullName>PISA_Training_Complete__c</fullName>
    <label>PISA Training Complete</label>
    <type>Date</type>
</CustomField>