force-app/main/default/objects/FSO__c/fields/PIV_Agency_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>PIV_Agency_Serial_Number__c</fullName>
    <description>Left Hand # on Back of PIV</description>
    <inlineHelpText>Bottom Left on Back of Card</inlineHelpText>
    <label>PIV Agency Serial Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>