force-app/main/default/objects/FSO__c/fields/PIV_Appt_Date__c.field-meta.xml
<CustomField>
    <fullName>PIV_Appt_Date__c</fullName>
    <label>PIV Appt Date</label>
    <type>Date</type>
</CustomField>