force-app/main/default/objects/FSO__c/fields/PIV_Badging_Location__c.field-meta.xml
<CustomField>
    <fullName>PIV_Badging_Location__c</fullName>
    <label>PIV Badging Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>