force-app/main/default/objects/FSO__c/fields/PIV_Email_Received__c.field-meta.xml
<CustomField>
    <fullName>PIV_Email_Received__c</fullName>
    <label>PIV Email Received</label>
    <type>Date</type>
</CustomField>