force-app/main/default/objects/FSO__c/fields/PIV_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>PIV_Expiration_Date__c</fullName>
    <label>PIV Expiration Date</label>
    <type>Date</type>
</CustomField>