force-app/main/default/objects/FSO__c/fields/PIV_IID__c.field-meta.xml
<CustomField>
    <fullName>PIV_IID__c</fullName>
    <description>Right Hand on Back of card</description>
    <inlineHelpText>Bottom Right on Back of Card</inlineHelpText>
    <label>PIV IID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>