force-app/main/default/objects/FSO__c/fields/PIV_Returned_Date__c.field-meta.xml
<CustomField>
    <fullName>PIV_Returned_Date__c</fullName>
    <label>PIV Returned Date</label>
    <type>Date</type>
</CustomField>