force-app/main/default/objects/FSO__c/fields/PIV_Sponsorship_Requested__c.field-meta.xml
<CustomField>
    <fullName>PIV_Sponsorship_Requested__c</fullName>
    <label>PIV Sponsorship Requested</label>
    <type>Date</type>
</CustomField>