force-app/main/default/objects/FSO__c/fields/RAP_Access__c.field-meta.xml
<CustomField>
    <fullName>RAP_Access__c</fullName>
    <label>RAP Access</label>
    <type>Date</type>
</CustomField>