force-app/main/default/objects/FSO__c/fields/Separation_Date__c.field-meta.xml
<CustomField>
    <fullName>Separation_Date__c</fullName>
    <label>Separation Date</label>
    <type>Date</type>
</CustomField>