force-app/main/default/objects/FSO__c/fields/Task_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Task_Order_Number__c</fullName>
    <label>Task Order Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>36C10B19N10080031</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>