force-app/main/default/objects/FSO__c/fields/TMS_Certifications_Complete__c.field-meta.xml
<CustomField>
    <fullName>TMS_Certifications_Complete__c</fullName>
    <label>TMS Certifications Complete</label>
    <type>Date</type>
</CustomField>