force-app/main/default/objects/FSO__c/fields/TMS_Trainings_Sent__c.field-meta.xml
<CustomField>
    <fullName>TMS_Trainings_Sent__c</fullName>
    <label>TMS Trainings Sent</label>
    <type>Date</type>
</CustomField>