force-app/main/default/objects/FSO__c/fields/Total_GFE_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_GFE_Value__c</fullName>
    <formula>GFE_Quantity__c  *  GFEValue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total GFE Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>