force-app/main/default/objects/FSO__c/fields/Tour_of_Duty_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Tour_of_Duty_Schedule__c</fullName>
    <label>Tour of Duty Schedule</label>
    <type>TextArea</type>
</CustomField>